force-app/main/default/objects/Onboarding__c/Onboarding__c.object-meta.xml
<CustomObject>
    <label>Onboarding</label>
    <nameField>
        <label>Onboarding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboardings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>