force-app/main/default/objects/Onboarding__c/fields/Onboarding_Step_Template_Category__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Step_Template_Category__c</fullName>
    <label>Onboarding Step Template Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>