force-app/main/default/objects/Onboarding__c/fields/Onboarding_Step_Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Step_Template_Version__c</fullName>
    <label>Onboarding Step Template Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>