force-app/main/default/objects/Onboarding__c/listViews/Operations_Onboarding.listView-meta.xml
<ListView>
    <fullName>Operations_Onboarding</fullName>
    <filterScope>Queue</filterScope>
    <label>Operations</label>
    <queue>Operations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>